# real-pendulum-2

./: .dockerignore  .env.example  .gitignore  README.md  buf.gen.yaml  docker-compose.yml  package-lock.json  package.json  playwright.ci.config.cjs  playwright.config.cjs  playwright.real.config.cjs
.github/workflows/: ci.yml
apps/control-api/: package.json  tsconfig.json  vitest.config.ts
apps/control-api/scripts/: serve-coupled-sim-grpc.ts  serve-fake-motor-grpc.ts  serve-simulation-grpc.ts
apps/control-api/src/: controllerPhysics.ts  controllerRunner.ts  coupledSimConfigFile.test.ts  coupledSimConfigFile.ts  fmin.d.ts  grpcRequestContext.ts  grpcSimDefaults.test.ts  grpcSimDefaults.ts  (+50 more)
apps/controller-service/: package.json
apps/motor-grpc/: package.json  tsconfig.json
apps/motor-grpc/native/teknic_motor/: CMakeLists.txt  motor_info.h  node_prepare.cpp  teknic_api.cpp  teknic_cfg.h  teknic_motor.cpp  teknic_session.h  teknic_util.h
apps/motor-service/: package.json  vitest.config.ts
apps/physical-motor-service/: package.json  tsconfig.build.json  vitest.config.ts
apps/physical-sensor-service/: package.json
apps/physics-sim/: README.md  package.json  requirements-rl.txt
apps/sensor-service/: package.json
apps/simulation/: README.md  package.json  requirements.txt
apps/web/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
config/: coupled-sim.parameters.json
docker/: Dockerfile.controller-service  Dockerfile.node  Dockerfile.simulation  Dockerfile.web  nginx.web.conf
docs/: TECHDOC.md  control-client-architecture.md  hardware-smoke-checklist.md  simulation-and-bench.md  testing-strategy.md
e2e/: env.ts  motor-api-real.spec.ts  playwright.ts  rail-jog.spec.ts  wait-for-connect.ts
notebooks/: LQR-pendulum-position.ipynb  LQR-pendulum.ipynb  LQR.ipynb  MUJOCO_LOG.TXT  rl_theory_practice.ipynb  tutorial.ipynb
notebooks/scripts/: clear_notebook_outputs.py
proto/: motor.proto  sensor.proto
scripts/: check-docker.mjs  e2e-stack-real.mjs  e2e-stack-real.ts  e2e-stack.mjs  e2e-stack.ts  flash-led-toggle.mjs  flash-sensor-firmware.mjs  flash-sensor-firmware.ts  portainer-reset-password.mjs  pull-portainer.mjs  run-with-root-env.mjs  vitest-physics-sim.ts  vitest-simulation.ts
(+232 files in other folders)
